@@ -1,5 +1,10 @@
 2008-11-24  Paul Thomas  <pault@gcc.gnu.org>
 
+	PR fortran/38033
+	* gfortran.dg/array_section_2.f90: New test.
+
+2008-11-24  Paul Thomas  <pault@gcc.gnu.org>
+
 	PR fortran/37926
 	* gfortran.dg/dummy_procedure_3.f90: New test.
 
